SUBDIRS =					\
	boxline.test				\
	endNotes.test				\
	firstLineIndent.test			\
	footer_01.test				\
	footer_02.test				\
	hyphenation.test			\
	mathml_nemeth				\
	minSyllableWidth.test			\
	mixed_content.test			\
	nemeth_MathCAT			\
	orphanControl_01.test			\
	orphanControl_02.test			\
	page_numbering.test			\
	pagenum.test				\
	prehyphenation.test			\
	printPageNumberRange_01.test		\
	printPageNumberRange_02.test		\
	printPageNumberRange_03.test		\
	test_mathml_woluwe

AM_CPPFLAGS =					\
	-I$(top_srcdir)/liblouisutdml		\
	-I$(top_srcdir)/gnulib

LDADD = \
	$(top_builddir)/liblouisutdml/liblouisutdml.la \
	$(top_builddir)/gnulib/libgnu.la \
	$(BASE_DEPENDENCIES_LIBS) \
	$(LTLIBINTL)

AM_CFLAGS =	\
	$(BASE_DEPENDENCIES_CFLAGS)

AM_LDFLAGS =	\
	$(BASE_DEPENDENCIES_LDFLAGS)

check_PROGRAMS = \
	testTranslateString\
	tripleTrans

testTranslateString_SOURCES = testTranslateString.c
tripleTrans_SOURCES = tripleTrans.c

XFAIL_TESTS =					\
	testTranslateString

dist_suite_TESTS =				\
	boxline.test				\
	endNotes.test				\
	firstLineIndent.test			\
	footer_01.test				\
	footer_02.test				\
	hyphenation.test			\
	mathml_nemeth/general_001.test		\
	mathml_nemeth/general_002.test		\
	mathml_nemeth/general_003.test		\
	mathml_nemeth/mfrac_01.test		\
	mathml_nemeth/mfrac_02.test		\
	mathml_nemeth/mfrac_03.test		\
	mathml_nemeth/mfrac_04.test		\
	mathml_nemeth/mfrac_05.test		\
	mathml_nemeth/mfrac_06.test		\
	mathml_nemeth/mfrac_07.test		\
	mathml_nemeth/mixed_scripts_01.test	\
	mathml_nemeth/mixed_scripts_02.test	\
	mathml_nemeth/mixed_scripts_03.test	\
	mathml_nemeth/mixed_scripts_04.test	\
	mathml_nemeth/mixed_scripts_05.test	\
	mathml_nemeth/mixed_scripts_06.test	\
	mathml_nemeth/mixed_scripts_07.test	\
	mathml_nemeth/mmultiscripts_01.test	\
	mathml_nemeth/mmultiscripts_02.test	\
	mathml_nemeth/mmultiscripts_03.test	\
	mathml_nemeth/mmultiscripts_04.test	\
	mathml_nemeth/mmultiscripts_05.test	\
	mathml_nemeth/mmultiscripts_06.test	\
	mathml_nemeth/mmultiscripts_07.test	\
	mathml_nemeth/mover_01.test		\
	mathml_nemeth/mover_02.test		\
	mathml_nemeth/mover_03.test		\
	mathml_nemeth/mover_04.test		\
	mathml_nemeth/mover_05.test		\
	mathml_nemeth/mover_06.test		\
	mathml_nemeth/mover_07.test		\
	mathml_nemeth/mover_08.test		\
	mathml_nemeth/mover_09.test		\
	mathml_nemeth/mover_10.test		\
	mathml_nemeth/mover_11.test		\
	mathml_nemeth/mover_12.test		\
	mathml_nemeth/mover_13.test		\
	mathml_nemeth/mover_14.test		\
	mathml_nemeth/mover_15.test		\
	mathml_nemeth/mover_16.test		\
	mathml_nemeth/mroot_01.test		\
	mathml_nemeth/msqrt_01.test		\
	mathml_nemeth/msqrt_02.test		\
	mathml_nemeth/msqrt_03.test		\
	mathml_nemeth/msub_01.test		\
	mathml_nemeth/msub_02.test		\
	mathml_nemeth/msub_03.test		\
	mathml_nemeth/msub_04.test		\
	mathml_nemeth/msub_05.test		\
	mathml_nemeth/msub_06.test		\
	mathml_nemeth/msub_07.test		\
	mathml_nemeth/msub_08.test		\
	mathml_nemeth/msub_09.test		\
	mathml_nemeth/msub_10.test		\
	mathml_nemeth/msubsup_01.test		\
	mathml_nemeth/msubsup_02.test		\
	mathml_nemeth/msubsup_03.test		\
	mathml_nemeth/msubsup_04.test		\
	mathml_nemeth/msubsup_05.test		\
	mathml_nemeth/msubsup_06.test		\
	mathml_nemeth/msubsup_07.test		\
	mathml_nemeth/msup_01.test		\
	mathml_nemeth/msup_02.test		\
	mathml_nemeth/msup_03.test		\
	mathml_nemeth/msup_04.test		\
	mathml_nemeth/msup_05.test		\
	mathml_nemeth/msup_06.test		\
	mathml_nemeth/msup_07.test		\
	mathml_nemeth/msup_08.test		\
	mathml_nemeth/msup_09.test		\
	mathml_nemeth/msup_10.test		\
	mathml_nemeth/msup_11.test		\
	mathml_nemeth/munder_01.test		\
	mathml_nemeth/munder_02.test		\
	mathml_nemeth/munder_03.test		\
	mathml_nemeth/munder_04.test		\
	mathml_nemeth/munder_05.test		\
	mathml_nemeth/munder_06.test		\
	mathml_nemeth/munder_07.test		\
	mathml_nemeth/munderover_01.test	\
	mathml_nemeth/munderover_02.test	\
	mathml_nemeth/munderover_03.test	\
	minSyllableWidth.test			\
	mixed_content.test			\
	nemeth_MathCAT/above_and_below_88_2.test			\
	nemeth_MathCAT/arrow_96_1.test			\
	nemeth_MathCAT/arrow_96_4.test			\
	nemeth_MathCAT/as_multiscript_nested_sub_sup_74_c_5.test			\
	nemeth_MathCAT/bar_97_b_1.test			\
	nemeth_MathCAT/bar_above_and_below_88_1.test			\
	nemeth_MathCAT/baseline_80_a_1.test			\
	nemeth_MathCAT/beveled_frac_62_b_1.test			\
	nemeth_MathCAT/binomial_90_1.test			\
	nemeth_MathCAT/boldface_32_b_3.test			\
	nemeth_MathCAT/boldface_32_b_6.test			\
	nemeth_MathCAT/cap_22_a_1.test			\
	nemeth_MathCAT/cap_roman_numeral_18_a_3.test			\
	nemeth_MathCAT/carrot_98_1.test			\
	nemeth_MathCAT/comma_78_2_invisible.test			\
	nemeth_MathCAT/comma_78_2.test			\
	nemeth_MathCAT/comma_78_3.test			\
	nemeth_MathCAT/comma_78_6.test			\
	nemeth_MathCAT/comma_ellipsis_in_sub_79_b_5.test			\
	nemeth_MathCAT/comma_in_number_in_sup_79_b_3.test			\
	nemeth_MathCAT/comma_in_sup_79_b_4.test			\
	nemeth_MathCAT/comma_number_77_4_20.test			\
	nemeth_MathCAT/comma_space_78_1.test			\
	nemeth_MathCAT/comparison_79_g_2.test			\
	nemeth_MathCAT/complex_frac_66_1.test			\
	nemeth_MathCAT/dash_42_4.test			\
	nemeth_MathCAT/dash_42_6.test			\
	nemeth_MathCAT/dots_99_a_1.test			\
	nemeth_MathCAT/dots_99_a_2.test			\
	nemeth_MathCAT/dots_99_a_3.test			\
	nemeth_MathCAT/ellipsis_43_b_3.test			\
	nemeth_MathCAT/ellipsis_level_79_f_1.test			\
	nemeth_MathCAT/extension_field_not_ratio_151_11.test			\
	nemeth_MathCAT/full_binomial.test			\
	nemeth_MathCAT/function_space_119_c_3.test			\
	nemeth_MathCAT/german_base_77_4_3.test			\
	nemeth_MathCAT/hyper_complex_frac_68_a_1.test			\
	nemeth_MathCAT/integral_77_4_26.test			\
	nemeth_MathCAT/left_sup_75_12.test			\
	nemeth_MathCAT/left_sup_75_1.test			\
	nemeth_MathCAT/left_sup_75_4.test			\
	nemeth_MathCAT/left_sup_75_7.test			\
	nemeth_MathCAT/left_sup_75_8.test			\
	nemeth_MathCAT/lesson_11_24_1.test			\
	nemeth_MathCAT/letter_26_b_19.test			\
	nemeth_MathCAT/lim_86_a_3.test			\
	nemeth_MathCAT/list_num_ind_11_a_1.test			\
	nemeth_MathCAT/list_num_ind_11_a_2.test			\
	nemeth_MathCAT/list_num_ind__11_a_3.test			\
	nemeth_MathCAT/list_num_ind_11_a_7.test			\
	nemeth_MathCAT/list_num_ind_11_c_1.test			\
	nemeth_MathCAT/list_num_ind_11_d_1.test			\
	nemeth_MathCAT/log_77_4_8.test			\
	nemeth_MathCAT/lower_roman_numeral_18_b_4.test			\
	nemeth_MathCAT/mathml_spec_example_86_a.test			\
	nemeth_MathCAT/mathml_spec_example_alt_char_86_a.test			\
	nemeth_MathCAT/menclose_111_a_4.test			\
	nemeth_MathCAT/menclose_115_1.test			\
	nemeth_MathCAT/menclose_86_a_1.test			\
	nemeth_MathCAT/menclose_86_a_4.test			\
	nemeth_MathCAT/menclose_86_b_11.test			\
	nemeth_MathCAT/menclose_86_b_1.test			\
	nemeth_MathCAT/menclose_bar_97_b_1.test			\
	nemeth_MathCAT/menclose_bar_97_b_3.test			\
	nemeth_MathCAT/menclose_lesson_12_5_5_5.test			\
	nemeth_MathCAT/menclose_primed_86_b_6.test			\
	nemeth_MathCAT/menclose_top_bottom_88_1.test			\
	nemeth_MathCAT/mixed_frac_63_a_1.test			\
	nemeth_MathCAT/mixed_frac_64_2.test			\
	nemeth_MathCAT/mmultiscripts_77_4_10.test			\
	nemeth_MathCAT/mmultiscripts_77_4_18.test			\
	nemeth_MathCAT/mmultiscripts_82_a_1.test			\
	nemeth_MathCAT/mmultiscripts_82_a_2.test			\
	nemeth_MathCAT/mmultiscripts_82_a_3.test			\
	nemeth_MathCAT/mmultiscripts_82_b_1.test			\
	nemeth_MathCAT/mmultiscripts_82_b_2.test			\
	nemeth_MathCAT/mmultiscripts_82_b_3.test			\
	nemeth_MathCAT/mmultiscripts_82_b_4.test			\
	nemeth_MathCAT/mmultiscripts_82_b_5.test			\
	nemeth_MathCAT/mmultiscripts_82_b_6.test			\
	nemeth_MathCAT/modifier_in_script_91_1.test			\
	nemeth_MathCAT/ms_38_4_8.test			\
	nemeth_MathCAT/ms.test			\
	nemeth_MathCAT/msubsup_82_a_1.test			\
	nemeth_MathCAT/msubsup_82_a_3.test			\
	nemeth_MathCAT/multipurpose_177_2_1.test			\
	nemeth_MathCAT/multipurpose_177_2_2.test			\
	nemeth_MathCAT/multipurpose_177_3_1.test			\
	nemeth_MathCAT/multipurpose_177_5_1.test			\
	nemeth_MathCAT/multipurpose_177_7_1.test			\
	nemeth_MathCAT/munder_lesson_12_5_5_5.test			\
	nemeth_MathCAT/nested_root_105_2.test			\
	nemeth_MathCAT/nested_sqrt_105_1.test			\
	nemeth_MathCAT/nested_sqrt_105_3.test			\
	nemeth_MathCAT/nested_sqrt_105_4.test			\
	nemeth_MathCAT/nested_sub_sup_74_c_5.test			\
	nemeth_MathCAT/nested_sup_74_b_1.test			\
	nemeth_MathCAT/nested_sup_74_b_4.test			\
	nemeth_MathCAT/nested_super_79_a_2.test			\
	nemeth_MathCAT/nested_super_79_a_3.test			\
	nemeth_MathCAT/nested_super_space_79_d_3.test			\
	nemeth_MathCAT/nested_super_space_79_d_7.test			\
	nemeth_MathCAT/nested_sup_mmultiscripts_74_b_1.test			\
	nemeth_MathCAT/nested_sup_sup_space_79_d_9.test			\
	nemeth_MathCAT/non_hyper_complex_frac_67_1.test			\
	nemeth_MathCAT/non_list_10_4.test			\
	nemeth_MathCAT/number_space_after.test			\
	nemeth_MathCAT/number_space_before_and_after.test			\
	nemeth_MathCAT/number_space_before.test			\
	nemeth_MathCAT/numeric_sub_81_a_1.test			\
	nemeth_MathCAT/order2_overbar_87_a_1.test			\
	nemeth_MathCAT/overbar_86_a_4.test			\
	nemeth_MathCAT/overbar_86_a_5.test			\
	nemeth_MathCAT/overbar_86_b_10.test			\
	nemeth_MathCAT/overbar_86_b_11.test			\
	nemeth_MathCAT/overbar_86_b_1.test			\
	nemeth_MathCAT/prescript_77_4_18.test			\
	nemeth_MathCAT/prescript_77_4_6.test			\
	nemeth_MathCAT/prescript_77_4_7.test			\
	nemeth_MathCAT/prime_172_5.test			\
	nemeth_MathCAT/prime_172_6.test			\
	nemeth_MathCAT/prime_172_8.test			\
	nemeth_MathCAT/prime_172_9.test			\
	nemeth_MathCAT/prime_77_4_4.test			\
	nemeth_MathCAT/prime_83_b_1.test			\
	nemeth_MathCAT/prime_83_b_3.test			\
	nemeth_MathCAT/prime_83_b_4.test			\
	nemeth_MathCAT/prime_83_b_5.test			\
	nemeth_MathCAT/prime_83_b_6.test			\
	nemeth_MathCAT/prime_83_b_7.test			\
	nemeth_MathCAT/prime_83_b_8.test			\
	nemeth_MathCAT/primed_86_b_6.test			\
	nemeth_MathCAT/prime_mathjax_83_b_2.test			\
	nemeth_MathCAT/prime_mmultiscripts_83_b_2.test			\
	nemeth_MathCAT/prime_mmultiscripts_83_b_4.test			\
	nemeth_MathCAT/prime_wiris_83_b_2.test			\
	nemeth_MathCAT/product_77_4_24.test			\
	nemeth_MathCAT/punct_37_1_2.test			\
	nemeth_MathCAT/punct_37_2_2.test			\
	nemeth_MathCAT/punct_37_7_1.test			\
	nemeth_MathCAT/punctuation_after_sup_79_b_2.test			\
	nemeth_MathCAT/ratio_151_11.test			\
	nemeth_MathCAT/root_104_iii_1.test			\
	nemeth_MathCAT/root_104_iii_4.test			\
	nemeth_MathCAT/set_vertical_bar_145_1.test			\
	nemeth_MathCAT/shape_110_1.test			\
	nemeth_MathCAT/simple_frac_62_a_3.test			\
	nemeth_MathCAT/sqrt_103_a_2.test			\
	nemeth_MathCAT/sqrt_103_a_4.test			\
	nemeth_MathCAT/sqrt_103_b_2.test			\
	nemeth_MathCAT/sub_ind_79_g_4.test			\
	nemeth_MathCAT/sub_ind_80_b_3.test			\
	nemeth_MathCAT/sub_ind_80_b_4.test			\
	nemeth_MathCAT/sub_ind_mmultiscripts_80_b_3.test			\
	nemeth_MathCAT/sub_sup_82_b_1.test			\
	nemeth_MathCAT/sub_sup_82_b_2.test			\
	nemeth_MathCAT/sum_77_4_23.test			\
	nemeth_MathCAT/superscript_80_a_2.test			\
	nemeth_MathCAT/tensor_from_mathml_spec.test			\
	nemeth_MathCAT/test_9_d_2.test			\
	nemeth_MathCAT/test_9_d_3.test			\
	nemeth_MathCAT/text_after_sup_79_c_3.test			\
	nemeth_MathCAT/trilinear_not_ratio_151_11.test			\
	nemeth_MathCAT/underbar_86_a_1.test			\
	nemeth_MathCAT/vertical_bar_145_4.test			\
	nemeth_MathCAT/whitespace_in_sup_79_e_1.test			\
	nemeth_MathCAT/word_77_4_12.test			\
	orphanControl_01.test			\
	orphanControl_02.test			\
	page_numbering.test			\
	pagenum.test				\
	prehyphenation.test			\
	printPageNumberRange_01.test		\
	printPageNumberRange_02.test		\
	printPageNumberRange_03.test		\
	test_mathml_woluwe/test_001.test	\
	test_mathml_woluwe/test_002.test	\
	test_mathml_woluwe/test_003.test	\
	test_mathml_woluwe/test_004.test	\
	test_mathml_woluwe/test_005.test	\
	test_mathml_woluwe/test_006.test	\
	test_mathml_woluwe/test_007.test	\
	test_mathml_woluwe/test_008.test	\
	test_mathml_woluwe/test_009.test	\
	test_mathml_woluwe/test_010.test	\
	test_mathml_woluwe/test_011.test	\
	test_mathml_woluwe/test_012.test	\
	test_mathml_woluwe/test_013.test	\
	test_mathml_woluwe/test_014.test	\
	test_mathml_woluwe/test_015.test	\
	test_mathml_woluwe/test_016.test	\
	test_mathml_woluwe/test_017.test	\
	test_mathml_woluwe/test_018.test	\
	test_mathml_woluwe/test_019.test	\
	test_mathml_woluwe/test_020.test	\
	test_mathml_woluwe/test_021.test	\
	test_mathml_woluwe/test_022.test	\
	test_mathml_woluwe/test_023.test	\
	test_mathml_woluwe/test_024.test	\
	test_mathml_woluwe/test_025.test	\
	test_mathml_woluwe/test_026.test	\
	test_mathml_woluwe/test_027.test	\
	test_mathml_woluwe/test_028.test	\
	test_mathml_woluwe/test_029.test	\
	test_mathml_woluwe/test_030.test	\
	test_mathml_woluwe/test_031.test	\
	test_mathml_woluwe/test_032.test	\
	test_mathml_woluwe/test_033.test	\
	test_mathml_woluwe/test_034.test	\
	test_mathml_woluwe/test_035.test	\
	test_mathml_woluwe/test_036.test	\
	test_mathml_woluwe/test_037.test	\
	test_mathml_woluwe/test_038.test	\
	test_mathml_woluwe/test_039.test	\
	test_mathml_woluwe/test_040.test	\
	test_mathml_woluwe/test_041.test	\
	test_mathml_woluwe/test_042.test	\
	test_mathml_woluwe/test_043.test	\
	test_mathml_woluwe/test_044.test	\
	test_mathml_woluwe/test_045.test	\
	test_mathml_woluwe/test_046.test	\
	test_mathml_woluwe/test_047.test	\
	test_mathml_woluwe/test_048.test	\
	test_mathml_woluwe/test_049.test	\
	test_mathml_woluwe/test_050.test	\
	test_mathml_woluwe/test_051.test	\
	test_mathml_woluwe/test_052.test	\
	test_mathml_woluwe/test_053.test	\
	test_mathml_woluwe/test_054.test	\
	test_mathml_woluwe/test_055.test	\
	test_mathml_woluwe/test_056.test	\
	test_mathml_woluwe/test_057.test	\
	test_mathml_woluwe/test_058.test	\
	test_mathml_woluwe/test_059.test	\
	test_mathml_woluwe/test_060.test	\
	test_mathml_woluwe/test_061.test	\
	test_mathml_woluwe/test_062.test	\
	test_mathml_woluwe/test_063.test	\
	test_mathml_woluwe/test_064.test	\
	test_mathml_woluwe/test_065.test	\
	test_mathml_woluwe/test_066.test	\
	test_mathml_woluwe/test_067.test	\
	test_mathml_woluwe/test_068.test	\
	test_mathml_woluwe/test_069.test	\
	test_mathml_woluwe/test_070.test	\
	test_mathml_woluwe/test_071.test	\
	test_mathml_woluwe/test_072.test	\
	test_mathml_woluwe/test_073.test	\
	test_mathml_woluwe/test_074.test	\
	test_mathml_woluwe/test_075.test	\
	test_mathml_woluwe/test_076.test	\
	test_mathml_woluwe/test_077.test	\
	test_mathml_woluwe/test_078.test	\
	test_mathml_woluwe/test_079.test	\
	test_mathml_woluwe/test_080.test	\
	test_mathml_woluwe/test_081.test	\
	test_mathml_woluwe/test_082.test	\
	test_mathml_woluwe/test_083.test	\
	test_mathml_woluwe/test_084.test	\
	test_mathml_woluwe/test_085.test	\
	test_mathml_woluwe/test_086.test	\
	test_mathml_woluwe/test_087.test	\
	test_mathml_woluwe/test_088.test	\
	test_mathml_woluwe/test_089.test	\
	test_mathml_woluwe/test_090.test	\
	test_mathml_woluwe/test_091.test	\
	test_mathml_woluwe/test_092.test	\
	test_mathml_woluwe/test_093.test	\
	test_mathml_woluwe/test_094.test	\
	test_mathml_woluwe/test_095.test	\
	test_mathml_woluwe/test_096.test	\
	test_mathml_woluwe/test_097.test	\
	test_mathml_woluwe/test_098.test	\
	test_mathml_woluwe/test_099.test	\
	test_mathml_woluwe/test_100.test	\
	test_mathml_woluwe/test_101.test	\
	test_mathml_woluwe/test_102.test	\
	test_mathml_woluwe/test_103.test	\
	test_mathml_woluwe/test_104.test	\
	test_mathml_woluwe/test_105.test	\
	test_mathml_woluwe/test_106.test	\
	test_mathml_woluwe/test_107.test	\
	test_mathml_woluwe/test_108.test	\
	test_mathml_woluwe/test_109.test	\
	test_mathml_woluwe/test_110.test	\
	test_mathml_woluwe/test_111.test	\
	test_mathml_woluwe/test_112.test	\
	test_mathml_woluwe/test_113.test	\
	test_mathml_woluwe/test_114.test	\
	test_mathml_woluwe/test_115.test	\
	test_mathml_woluwe/test_116.test	\
	test_mathml_woluwe/test_117.test	\
	test_mathml_woluwe/test_118.test	\
	test_mathml_woluwe/test_119.test	

XFAIL_TESTS +=					\
	pagenum.test				\
	footer_01.test				\
	footer_02.test				\
	orphanControl_02.test			\
	firstLineIndent.test			\
	mixed_content.test			\
	printPageNumberRange_03.test		\
	mathml_nemeth/general_001.test		\
	mathml_nemeth/general_002.test		\
	mathml_nemeth/general_003.test		\
	mathml_nemeth/mfrac_02.test		\
	mathml_nemeth/mfrac_03.test		\
	mathml_nemeth/mfrac_04.test		\
	mathml_nemeth/mfrac_06.test		\
	mathml_nemeth/mfrac_07.test		\
	mathml_nemeth/mixed_scripts_01.test	\
	mathml_nemeth/mixed_scripts_02.test	\
	mathml_nemeth/mixed_scripts_03.test	\
	mathml_nemeth/mixed_scripts_04.test	\
	mathml_nemeth/mixed_scripts_05.test	\
	mathml_nemeth/mixed_scripts_06.test	\
	mathml_nemeth/mixed_scripts_07.test	\
	mathml_nemeth/msub_02.test		\
	mathml_nemeth/msub_03.test		\
	mathml_nemeth/msub_04.test		\
	mathml_nemeth/msub_05.test		\
	mathml_nemeth/msub_06.test		\
	mathml_nemeth/msub_07.test		\
	mathml_nemeth/msub_08.test		\
	mathml_nemeth/msub_09.test		\
	mathml_nemeth/msub_10.test		\
	mathml_nemeth/msubsup_02.test		\
	mathml_nemeth/msubsup_03.test		\
	mathml_nemeth/msubsup_04.test		\
	mathml_nemeth/msubsup_05.test		\
	mathml_nemeth/msubsup_06.test		\
	mathml_nemeth/msubsup_07.test		\
	mathml_nemeth/msup_02.test		\
	mathml_nemeth/msup_06.test		\
	mathml_nemeth/msup_09.test		\
	mathml_nemeth/msup_10.test		\
	mathml_nemeth/msqrt_03.test		\
	mathml_nemeth/mmultiscripts_01.test	\
	mathml_nemeth/mmultiscripts_02.test	\
	mathml_nemeth/mmultiscripts_03.test	\
	mathml_nemeth/mmultiscripts_04.test	\
	mathml_nemeth/mmultiscripts_05.test	\
	mathml_nemeth/mmultiscripts_06.test	\
	mathml_nemeth/mmultiscripts_07.test	\
	mathml_nemeth/mover_01.test		\
	mathml_nemeth/mover_02.test		\
	mathml_nemeth/mover_03.test		\
	mathml_nemeth/mover_04.test		\
	mathml_nemeth/mover_05.test		\
	mathml_nemeth/mover_06.test		\
	mathml_nemeth/mover_07.test		\
	mathml_nemeth/mover_08.test		\
	mathml_nemeth/mover_13.test		\
	mathml_nemeth/mover_14.test		\
	mathml_nemeth/mover_15.test		\
	mathml_nemeth/munder_02.test		\
	mathml_nemeth/munder_03.test		\
	mathml_nemeth/munder_06.test		\
	mathml_nemeth/munder_07.test		\
	mathml_nemeth/munderover_02.test	\
	mathml_nemeth/munderover_03.test	\
	nemeth_MathCAT/above_and_below_88_2.test			\
	nemeth_MathCAT/arrow_96_4.test					\
	nemeth_MathCAT/as_multiscript_nested_sub_sup_74_c_5.test	\
	nemeth_MathCAT/bar_97_b_1.test					\
	nemeth_MathCAT/beveled_frac_62_b_1.test				\
	nemeth_MathCAT/binomial_90_1.test				\
	nemeth_MathCAT/boldface_32_b_3.test				\
	nemeth_MathCAT/boldface_32_b_6.test				\
	nemeth_MathCAT/cap_22_a_1.test					\
	nemeth_MathCAT/cap_roman_numeral_18_a_3.test			\
	nemeth_MathCAT/carrot_98_1.test					\
	nemeth_MathCAT/comma_78_2.test					\
	nemeth_MathCAT/comma_78_2_invisible.test			\
	nemeth_MathCAT/comma_78_3.test					\
	nemeth_MathCAT/comma_78_6.test					\
	nemeth_MathCAT/comma_ellipsis_in_sub_79_b_5.test		\
	nemeth_MathCAT/comma_in_sup_79_b_4.test				\
	nemeth_MathCAT/comma_number_77_4_20.test			\
	nemeth_MathCAT/comma_space_78_1.test				\
	nemeth_MathCAT/comparison_79_g_2.test				\
	nemeth_MathCAT/complex_frac_66_1.test				\
	nemeth_MathCAT/dash_42_4.test					\
	nemeth_MathCAT/dash_42_6.test					\
	nemeth_MathCAT/dots_99_a_1.test					\
	nemeth_MathCAT/dots_99_a_2.test					\
	nemeth_MathCAT/dots_99_a_3.test					\
	nemeth_MathCAT/ellipsis_43_b_3.test				\
	nemeth_MathCAT/ellipsis_level_79_f_1.test			\
	nemeth_MathCAT/extension_field_not_ratio_151_11.test		\
	nemeth_MathCAT/full_binomial.test				\
	nemeth_MathCAT/function_space_119_c_3.test			\
	nemeth_MathCAT/german_base_77_4_3.test				\
	nemeth_MathCAT/hyper_complex_frac_68_a_1.test			\
	nemeth_MathCAT/integral_77_4_26.test				\
	nemeth_MathCAT/left_sup_75_1.test				\
	nemeth_MathCAT/left_sup_75_12.test				\
	nemeth_MathCAT/left_sup_75_4.test				\
	nemeth_MathCAT/left_sup_75_7.test				\
	nemeth_MathCAT/left_sup_75_8.test				\
	nemeth_MathCAT/lesson_11_24_1.test				\
	nemeth_MathCAT/letter_26_b_19.test				\
	nemeth_MathCAT/lim_86_a_3.test					\
	nemeth_MathCAT/list_num_ind_11_a_1.test				\
	nemeth_MathCAT/list_num_ind_11_a_2.test				\
	nemeth_MathCAT/list_num_ind_11_a_7.test				\
	nemeth_MathCAT/list_num_ind_11_c_1.test				\
	nemeth_MathCAT/list_num_ind__11_a_3.test			\
	nemeth_MathCAT/log_77_4_8.test					\
	nemeth_MathCAT/lower_roman_numeral_18_b_4.test			\
	nemeth_MathCAT/mathml_spec_example_86_a.test			\
	nemeth_MathCAT/menclose_111_a_4.test				\
	nemeth_MathCAT/menclose_115_1.test				\
	nemeth_MathCAT/menclose_86_a_1.test				\
	nemeth_MathCAT/menclose_86_a_4.test				\
	nemeth_MathCAT/menclose_86_b_1.test				\
	nemeth_MathCAT/menclose_86_b_11.test				\
	nemeth_MathCAT/menclose_bar_97_b_1.test				\
	nemeth_MathCAT/menclose_lesson_12_5_5_5.test			\
	nemeth_MathCAT/menclose_primed_86_b_6.test			\
	nemeth_MathCAT/menclose_top_bottom_88_1.test			\
	nemeth_MathCAT/mixed_frac_63_a_1.test				\
	nemeth_MathCAT/mixed_frac_64_2.test				\
	nemeth_MathCAT/mmultiscripts_77_4_10.test			\
	nemeth_MathCAT/mmultiscripts_77_4_18.test			\
	nemeth_MathCAT/mmultiscripts_82_a_1.test			\
	nemeth_MathCAT/mmultiscripts_82_a_2.test			\
	nemeth_MathCAT/mmultiscripts_82_a_3.test			\
	nemeth_MathCAT/mmultiscripts_82_b_1.test			\
	nemeth_MathCAT/mmultiscripts_82_b_2.test			\
	nemeth_MathCAT/mmultiscripts_82_b_3.test			\
	nemeth_MathCAT/mmultiscripts_82_b_4.test			\
	nemeth_MathCAT/mmultiscripts_82_b_5.test			\
	nemeth_MathCAT/mmultiscripts_82_b_6.test			\
	nemeth_MathCAT/ms.test						\
	nemeth_MathCAT/ms_38_4_8.test					\
	nemeth_MathCAT/msubsup_82_a_3.test				\
	nemeth_MathCAT/multipurpose_177_2_1.test			\
	nemeth_MathCAT/multipurpose_177_2_2.test			\
	nemeth_MathCAT/multipurpose_177_3_1.test			\
	nemeth_MathCAT/multipurpose_177_5_1.test			\
	nemeth_MathCAT/multipurpose_177_7_1.test			\
	nemeth_MathCAT/munder_lesson_12_5_5_5.test			\
	nemeth_MathCAT/nested_root_105_2.test				\
	nemeth_MathCAT/nested_sqrt_105_1.test				\
	nemeth_MathCAT/nested_sqrt_105_3.test				\
	nemeth_MathCAT/nested_sqrt_105_4.test				\
	nemeth_MathCAT/nested_sub_sup_74_c_5.test			\
	nemeth_MathCAT/nested_sup_74_b_1.test				\
	nemeth_MathCAT/nested_sup_74_b_4.test				\
	nemeth_MathCAT/nested_sup_mmultiscripts_74_b_1.test		\
	nemeth_MathCAT/nested_sup_sup_space_79_d_9.test			\
	nemeth_MathCAT/nested_super_space_79_d_3.test			\
	nemeth_MathCAT/nested_super_space_79_d_7.test			\
	nemeth_MathCAT/non_hyper_complex_frac_67_1.test			\
	nemeth_MathCAT/non_list_10_4.test				\
	nemeth_MathCAT/number_space_before.test				\
	nemeth_MathCAT/number_space_before_and_after.test		\
	nemeth_MathCAT/numeric_sub_81_a_1.test				\
	nemeth_MathCAT/order2_overbar_87_a_1.test			\
	nemeth_MathCAT/overbar_86_a_4.test				\
	nemeth_MathCAT/overbar_86_a_5.test				\
	nemeth_MathCAT/overbar_86_b_1.test				\
	nemeth_MathCAT/overbar_86_b_10.test				\
	nemeth_MathCAT/overbar_86_b_11.test				\
	nemeth_MathCAT/prescript_77_4_18.test				\
	nemeth_MathCAT/prescript_77_4_6.test				\
	nemeth_MathCAT/prescript_77_4_7.test				\
	nemeth_MathCAT/prime_172_5.test					\
	nemeth_MathCAT/prime_172_6.test					\
	nemeth_MathCAT/prime_172_8.test					\
	nemeth_MathCAT/prime_172_9.test					\
	nemeth_MathCAT/prime_77_4_4.test				\
	nemeth_MathCAT/prime_83_b_1.test				\
	nemeth_MathCAT/prime_83_b_3.test				\
	nemeth_MathCAT/prime_83_b_4.test				\
	nemeth_MathCAT/prime_83_b_5.test				\
	nemeth_MathCAT/prime_83_b_6.test				\
	nemeth_MathCAT/prime_83_b_8.test				\
	nemeth_MathCAT/prime_mathjax_83_b_2.test			\
	nemeth_MathCAT/prime_mmultiscripts_83_b_2.test			\
	nemeth_MathCAT/prime_mmultiscripts_83_b_4.test			\
	nemeth_MathCAT/prime_wiris_83_b_2.test				\
	nemeth_MathCAT/primed_86_b_6.test				\
	nemeth_MathCAT/product_77_4_24.test				\
	nemeth_MathCAT/punct_37_1_2.test				\
	nemeth_MathCAT/punct_37_2_2.test				\
	nemeth_MathCAT/punct_37_7_1.test				\
	nemeth_MathCAT/punctuation_after_sup_79_b_2.test		\
	nemeth_MathCAT/ratio_151_11.test				\
	nemeth_MathCAT/set_vertical_bar_145_1.test			\
	nemeth_MathCAT/shape_110_1.test					\
	nemeth_MathCAT/sqrt_103_b_2.test				\
	nemeth_MathCAT/sub_ind_79_g_4.test				\
	nemeth_MathCAT/sub_ind_80_b_3.test				\
	nemeth_MathCAT/sub_ind_80_b_4.test				\
	nemeth_MathCAT/sub_ind_mmultiscripts_80_b_3.test		\
	nemeth_MathCAT/sum_77_4_23.test					\
	nemeth_MathCAT/superscript_80_a_2.test				\
	nemeth_MathCAT/tensor_from_mathml_spec.test			\
	nemeth_MathCAT/test_9_d_2.test					\
	nemeth_MathCAT/test_9_d_3.test					\
	nemeth_MathCAT/text_after_sup_79_c_3.test			\
	nemeth_MathCAT/trilinear_not_ratio_151_11.test			\
	nemeth_MathCAT/underbar_86_a_1.test				\
	nemeth_MathCAT/vertical_bar_145_4.test				\
	nemeth_MathCAT/whitespace_in_sup_79_e_1.test			\
	nemeth_MathCAT/word_77_4_12.test				\
	test_mathml_woluwe/test_060.test	\
	test_mathml_woluwe/test_061.test	\
	test_mathml_woluwe/test_062.test	\
	test_mathml_woluwe/test_063.test	\
	test_mathml_woluwe/test_075.test	\
	test_mathml_woluwe/test_076.test	\
	test_mathml_woluwe/test_078.test	\
	test_mathml_woluwe/test_093.test	\
	test_mathml_woluwe/test_096.test	\
	test_mathml_woluwe/test_099.test

TESTS =						\
	$(check_PROGRAMS)			\
	$(dist_suite_TESTS)

TEST_LOG_COMPILER_SCRIPT = run_test.sh
TEST_EXTENSIONS = .test
TEST_LOG_COMPILER = $(top_srcdir)/tests/$(TEST_LOG_COMPILER_SCRIPT)

EXTRA_DIST = README $(TEST_LOG_COMPILER_SCRIPT)

TESTS_ENVIRONMENT =									\
	LD_LIBRARY_PATH=$(abs_top_builddir)/liblouisutdml/.libs:$$LD_LIBRARY_PATH	\
	PATH=$(abs_top_builddir)/tools:$$PATH
