SUBDIRS =			\
	general_001.test	\
	mfrac_01.test		\
	mfrac_02.test		\
	mfrac_03.test		\
	mfrac_04.test		\
	mfrac_05.test		\
	mfrac_06.test		\
	mfrac_07.test		\
	mixed_scripts_01.test	\
	mixed_scripts_02.test	\
	mixed_scripts_03.test	\
	mixed_scripts_04.test	\
	mixed_scripts_05.test	\
	mixed_scripts_06.test	\
	mixed_scripts_07.test	\
	mroot_01.test		\
	msqrt_01.test		\
	msqrt_02.test		\
	msqrt_03.test		\
	msub_01.test		\
	msub_02.test		\
	msub_03.test		\
	msub_04.test		\
	msub_05.test		\
	msub_06.test		\
	msub_07.test		\
	msub_08.test		\
	msub_09.test		\
	msub_10.test		\
	msubsup_01.test		\
	msubsup_02.test		\
	msubsup_03.test		\
	msubsup_04.test		\
	msubsup_05.test		\
	msubsup_06.test		\
	msubsup_07.test		\
	msup_01.test		\
	msup_02.test		\
	msup_03.test		\
	msup_04.test		\
	msup_05.test		\
	msup_06.test		\
	msup_07.test		\
	msup_08.test		\
	msup_09.test		\
	msup_10.test		\
	msup_11.test

EXTRA_DIST =			\
	README			\
	liblouisutdml.ini	\
	styles.cfg
