SUBDIRS =			\
	above_and_below_88_2.test	\
	arrow_96_1.test	\
	arrow_96_4.test	\
	as_multiscript_nested_sub_sup_74_c_5.test	\
	bar_97_b_1.test	\
	bar_above_and_below_88_1.test	\
	baseline_80_a_1.test	\
	beveled_frac_62_b_1.test	\
	binomial_90_1.test	\
	boldface_32_b_3.test	\
	boldface_32_b_6.test	\
	cap_22_a_1.test	\
	cap_roman_numeral_18_a_3.test	\
	carrot_98_1.test	\
	comma_78_2_invisible.test	\
	comma_78_2.test	\
	comma_78_3.test	\
	comma_78_6.test	\
	comma_ellipsis_in_sub_79_b_5.test	\
	comma_in_number_in_sup_79_b_3.test	\
	comma_in_sup_79_b_4.test	\
	comma_number_77_4_20.test	\
	comma_space_78_1.test	\
	comparison_79_g_2.test	\
	complex_frac_66_1.test	\
	dash_42_4.test	\
	dash_42_6.test	\
	dots_99_a_1.test	\
	dots_99_a_2.test	\
	dots_99_a_3.test	\
	ellipsis_43_b_3.test	\
	ellipsis_level_79_f_1.test	\
	extension_field_not_ratio_151_11.test	\
	full_binomial.test	\
	function_space_119_c_3.test	\
	german_base_77_4_3.test	\
	hyper_complex_frac_68_a_1.test	\
	identity_matrix_126.test	\
	integral_77_4_26.test	\
	left_sup_75_12.test	\
	left_sup_75_1.test	\
	left_sup_75_4.test	\
	left_sup_75_7.test	\
	left_sup_75_8.test	\
	lesson_11_24_1.test	\
	letter_26_b_19.test	\
	lim_86_a_3.test	\
	list_num_ind_11_a_1.test	\
	list_num_ind_11_a_2.test	\
	list_num_ind__11_a_3.test	\
	list_num_ind_11_a_7.test	\
	list_num_ind_11_c_1.test	\
	list_num_ind_11_d_1.test	\
	log_77_4_8.test	\
	lower_roman_numeral_18_b_4.test	\
	mathml_spec_example_86_a.test	\
	mathml_spec_example_alt_char_86_a.test	\
	menclose_111_a_4.test	\
	menclose_115_1.test	\
	menclose_86_a_1.test	\
	menclose_86_a_4.test	\
	menclose_86_b_11.test	\
	menclose_86_b_1.test	\
	menclose_bar_97_b_1.test	\
	menclose_bar_97_b_3.test	\
	menclose_lesson_12_5_5_5.test	\
	menclose_primed_86_b_6.test	\
	menclose_top_bottom_88_1.test	\
	mixed_frac_63_a_1.test	\
	mixed_frac_64_2.test	\
	mmultiscripts_77_4_10.test	\
	mmultiscripts_77_4_18.test	\
	mmultiscripts_82_a_1.test	\
	mmultiscripts_82_a_2.test	\
	mmultiscripts_82_a_3.test	\
	mmultiscripts_82_b_1.test	\
	mmultiscripts_82_b_2.test	\
	mmultiscripts_82_b_3.test	\
	mmultiscripts_82_b_4.test	\
	mmultiscripts_82_b_5.test	\
	mmultiscripts_82_b_6.test	\
	modifier_in_script_91_1.test	\
	ms_38_4_8.test	\
	ms.test	\
	msubsup_82_a_1.test	\
	msubsup_82_a_3.test	\
	multipurpose_177_2_1.test	\
	multipurpose_177_2_2.test	\
	multipurpose_177_3_1.test	\
	multipurpose_177_5_1.test	\
	multipurpose_177_7_1.test	\
	munder_lesson_12_5_5_5.test	\
	nested_root_105_2.test	\
	nested_sqrt_105_1.test	\
	nested_sqrt_105_3.test	\
	nested_sqrt_105_4.test	\
	nested_sub_sup_74_c_5.test	\
	nested_sup_74_b_1.test	\
	nested_sup_74_b_4.test	\
	nested_super_79_a_2.test	\
	nested_super_79_a_3.test	\
	nested_super_space_79_d_3.test	\
	nested_super_space_79_d_7.test	\
	nested_sup_mmultiscripts_74_b_1.test	\
	nested_sup_sup_space_79_d_9.test	\
	non_hyper_complex_frac_67_1.test	\
	non_list_10_4.test	\
	number_space_after.test	\
	number_space_before_and_after.test	\
	number_space_before.test	\
	numeric_sub_81_a_1.test	\
	order2_overbar_87_a_1.test	\
	overbar_86_a_4.test	\
	overbar_86_a_5.test	\
	overbar_86_b_10.test	\
	overbar_86_b_11.test	\
	overbar_86_b_1.test	\
	prescript_77_4_18.test	\
	prescript_77_4_6.test	\
	prescript_77_4_7.test	\
	prime_172_5.test	\
	prime_172_6.test	\
	prime_172_8.test	\
	prime_172_9.test	\
	prime_77_4_4.test	\
	prime_83_b_1.test	\
	prime_83_b_3.test	\
	prime_83_b_4.test	\
	prime_83_b_5.test	\
	prime_83_b_6.test	\
	prime_83_b_7.test	\
	prime_83_b_8.test	\
	primed_86_b_6.test	\
	prime_mathjax_83_b_2.test	\
	prime_mmultiscripts_83_b_2.test	\
	prime_mmultiscripts_83_b_4.test	\
	prime_wiris_83_b_2.test	\
	product_77_4_24.test	\
	punct_37_1_2.test	\
	punct_37_2_2.test	\
	punct_37_7_1.test	\
	punctuation_after_sup_79_b_2.test	\
	ratio_151_11.test	\
	root_104_iii_1.test	\
	root_104_iii_4.test	\
	set_vertical_bar_145_1.test	\
	shape_110_1.test	\
	simple_frac_62_a_3.test	\
	sqrt_103_a_2.test	\
	sqrt_103_a_4.test	\
	sqrt_103_b_2.test	\
	sub_ind_79_g_4.test	\
	sub_ind_80_b_3.test	\
	sub_ind_80_b_4.test	\
	sub_ind_mmultiscripts_80_b_3.test	\
	sub_sup_82_b_1.test	\
	sub_sup_82_b_2.test	\
	sum_77_4_23.test	\
	superscript_80_a_2.test	\
	table_entry_after_sup_79_c_4.test	\
	tensor_from_mathml_spec.test	\
	test_9_d_2.test	\
	test_9_d_3.test	\
	text_after_sup_79_c_3.test	\
	trilinear_not_ratio_151_11.test	\
	underbar_86_a_1.test	\
	vertical_bar_145_4.test	\
	whitespace_in_sup_79_e_1.test	\
	word_77_4_12.test

EXTRA_DIST =			\
	README			\
	liblouisutdml.ini	\
	styles.cfg
