SUBDIRS =		\
	test_001.test	\
	test_002.test	\
	test_003.test	\
	test_004.test	\
	test_005.test	\
	test_006.test	\
	test_007.test	\
	test_008.test	\
	test_009.test	\
	test_010.test	\
	test_011.test	\
	test_012.test	\
	test_013.test	\
	test_014.test	\
	test_015.test	\
	test_016.test	\
	test_017.test	\
	test_018.test	\
	test_019.test	\
	test_020.test	\
	test_021.test	\
	test_022.test	\
	test_023.test	\
	test_024.test	\
	test_025.test	\
	test_026.test	\
	test_027.test	\
	test_028.test	\
	test_029.test	\
	test_030.test	\
	test_031.test	\
	test_032.test	\
	test_033.test	\
	test_034.test	\
	test_035.test	\
	test_036.test	\
	test_037.test	\
	test_038.test	\
	test_039.test	\
	test_040.test	\
	test_041.test	\
	test_042.test	\
	test_043.test	\
	test_044.test	\
	test_045.test	\
	test_046.test	\
	test_047.test	\
	test_048.test	\
	test_049.test	\
	test_050.test	\
	test_051.test	\
	test_052.test	\
	test_053.test	\
	test_054.test	\
	test_055.test	\
	test_056.test	\
	test_057.test	\
	test_058.test	\
	test_059.test	\
	test_060.test	\
	test_061.test	\
	test_062.test	\
	test_063.test	\
	test_064.test	\
	test_065.test	\
	test_066.test	\
	test_067.test	\
	test_068.test	\
	test_069.test	\
	test_070.test	\
	test_071.test	\
	test_072.test	\
	test_073.test	\
	test_074.test	\
	test_075.test	\
	test_076.test	\
	test_077.test	\
	test_078.test	\
	test_079.test	\
	test_080.test	\
	test_081.test	\
	test_082.test	\
	test_083.test	\
	test_084.test	\
	test_085.test	\
	test_086.test	\
	test_087.test	\
	test_088.test	\
	test_089.test	\
	test_090.test	\
	test_091.test	\
	test_092.test	\
	test_093.test	\
	test_094.test	\
	test_095.test	\
	test_096.test	\
	test_097.test	\
	test_098.test	\
	test_099.test	\
	test_100.test	\
	test_101.test	\
	test_102.test	\
	test_103.test	\
	test_104.test	\
	test_105.test	\
	test_106.test	\
	test_107.test	\
	test_108.test	\
	test_109.test	\
	test_110.test	\
	test_111.test	\
	test_112.test	\
	test_113.test	\
	test_114.test	\
	test_115.test	\
	test_116.test	\
	test_117.test	\
	test_118.test	\
	test_119.test

EXTRA_DIST =					\
	README					\
	styles.cfg				\
	liblouisutdml.ini
