SUBDIRS =		\
	test_001	\
	test_002	\
	test_003	\
	test_004	\
	test_005	\
	test_006	\
	test_007	\
	test_008	\
	test_009	\
	test_010	\
	test_011	\
	test_012	\
	test_013	\
	test_014	\
	test_015	\
	test_016	\
	test_017	\
	test_018	\
	test_019	\
	test_020	\
	test_021	\
	test_022	\
	test_023	\
	test_024	\
	test_025	\
	test_026	\
	test_027	\
	test_028	\
	test_029	\
	test_030	\
	test_031	\
	test_032	\
	test_033	\
	test_034	\
	test_035	\
	test_036	\
	test_037	\
	test_038	\
	test_039	\
	test_040	\
	test_041	\
	test_042	\
	test_043	\
	test_044	\
	test_045	\
	test_046	\
	test_047	\
	test_048	\
	test_049	\
	test_050	\
	test_051	\
	test_052	\
	test_053	\
	test_054	\
	test_055	\
	test_056	\
	test_057	\
	test_058	\
	test_059	\
	test_060	\
	test_061	\
	test_062	\
	test_063	\
	test_064	\
	test_065	\
	test_066	\
	test_067	\
	test_068	\
	test_069	\
	test_070	\
	test_071	\
	test_072	\
	test_073	\
	test_074	\
	test_075	\
	test_076	\
	test_077	\
	test_078	\
	test_079	\
	test_080	\
	test_081	\
	test_082	\
	test_083	\
	test_084	\
	test_085	\
	test_086	\
	test_087	\
	test_088	\
	test_089	\
	test_090	\
	test_091	\
	test_092	\
	test_093	\
	test_094	\
	test_095	\
	test_096	\
	test_097	\
	test_098	\
	test_099	\
	test_100	\
	test_101	\
	test_102	\
	test_103	\
	test_104	\
	test_105	\
	test_106	\
	test_107	\
	test_108	\
	test_109	\
	test_110	\
	test_111	\
	test_112	\
	test_113	\
	test_114	\
	test_115	\
	test_116	\
	test_117	\
	test_118	\
	test_119

EXTRA_DIST =			\
	README			\
	liblouisutdml.ini	\
	styles.cfg
